prepare new minor release in version 1.3.0
- Upgraded Gradle to version 8.12-rc-1